# SecretsOfThePath

./: .gitattributes  Cargo.toml  World.tscn  icon.svg.import  level_controller.gd  player.gd  player_container.gd  project.godot
.cargo/: config.toml
parts/: light_activator.tscn  player.tscn  player_outside.tscn
parts/lights/: bottom_side_lamp.tres  left_side_lamp.tres  right_side_lamp.tres  side_lamp.gd  side_lamp.tscn  top_side_lamp.tres
scripts/: ShadowShader.gdshader  area_activator.gd
src/: main.rs
src/game/: mod.rs  primary_logic.rs  textcolor_smoothing.rs
src/game/internal/: components.rs  funcs.rs  mod.rs
src/utils/: buttoning.rs  mod.rs  position_smoothing.rs  responsive.rs
textures/: 2d_lights_and_shadows_neutral_point_light.webp.import  basic_test_tileset.png.import  basic_test_tileset.tres  player.png.import  side_lamps.png.import  structure_outside.ase  structure_outside.png.import  structure_outside.tres  vert_side_lamps.png.import
