[package]
name = "secrets-of-the-path"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

